# slack-exporter

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: slack-message-aggregator.yml
