[tool.poetry]
name = "slack-exporter"
version = "0.1.0"
description = ""
authors = ["Naoyoshi Aikawa <n.aikawa91@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_exporter"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
slack-bolt = "^1.16.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
