[tool.poetry]
name = "slack-exporter"
version = "0.1.0"
description = ""
authors = ["Naoyoshi Aikawa <n.aikawa91@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_exporter"}]

[tool.poetry.dependencies]
python = "3.9.13"
python-dotenv = "^0.21.1"
slack-bolt = "^1.16.2"
pytz = "^2023.3"
slack-sdk = "^3.21.3"
sqlalchemy = "^2.0.15"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
types-pytz = "^2023.3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
